argocd/internal/ollama/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai
  labels:
    istio-injection: enabled
